Update reception model
